# Mentor

./: .env.example  .gitignore  CODEBASE_DOCUMENTATION.md  CURSOR_PROMPTING_DOCUMENTATION.md  CURSOR_PROMPTING_IMPLEMENTATION.md  CURSOR_PROMPTING_IMPLEMENTATION_SUMMARY.md  CURSOR_PROMPTING_SETUP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  claude.md  package-lock.json  package.json  pnpm-lock.yaml  run-e2e-tests.sh  start.bat  start.ps1  start.sh  tsconfig.json  tsconfig.tsbuildinfo
Context/: Features.txt  (+4 more)
backend/: .env.example  CURSOR_PROMPTING_README.md  README.md  cache.py  course_scraper.py  cursor_prompting.py  cursor_prompts.py  extract.py  generate.py  main.py  performance.py  prompting.py  provider.py  pyproject.toml  run_tests.sh  search.py  security.py  test_api_integration.py  test_cursor_prompting.py  test_prompting.py  test_security.py
backend/cache/: cursor_prompt_0ef4117bf4546bdf93e2f76ee1b46116.json  cursor_prompt_24804ef5d5e5e3172c9e450b2f6f3847.json  cursor_prompt_2851b71c9136ebd8f38d9d5e36e544bb.json  cursor_prompt_3f27c07e082374cdae566c8890766f03.json  cursor_prompt_47e4b9a1eb1770f27bb58fd59be32abe.json  cursor_prompt_4b7fbf50263208c0656de33a77a2833f.json  cursor_prompt_57df3081b20ea7387cb731e1dd46720b.json  cursor_prompt_6b4fbe482676a74059d6daac4139e55b.json  cursor_prompt_8b83fcbb065f554cec06a2ab087654c3.json  cursor_prompt_a698b198b8193b8b912f5057b5a5864f.json  cursor_prompt_c8a699159a631574302975fb01e13e06.json  cursor_prompt_ed77c9f334f83cb59fabdfeafcbe58aa.json  mit_computer_science.json  njit_computer_science.json  (+2 more)
(+116 files in other folders)
