[tool.poetry]
name = "Mentor"
version = "0.1.0"
description = "FastAPI app for PDF resume processing"
authors = ["Pablo Leyva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
PyMuPDF = "^1.23.8"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"