[tool.poetry]
name = "Mentór"
version = "0.1.0"
description = "FastAPI app for PDF resume processing"
authors = ["Pablo Leyva"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
PyMuPDF = "^1.23.8"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
anthropic = "^0.40.0"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
dotenv = "^0.9.9"
serpapi = "^0.1.5"
openai = "^2.1.0"
google-generativeai = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"